--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/7012778fea.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -53,8 +54,8 @@
                     <div class="tab-content active-content" id="skills">
                         <ul>
                             <li><span>Web Development</span><br>Web app development</li>
-                            <li><span>Game Development</span><br>SDL game development</li>
-                            <li><span>Quantitative Development</span><br>Building quantitative trading system</li>
+                            <li><span>Game Design & Programming</span><br>SDL game development</li>
+                            <li><span>Quantitative Finance Development</span><br>Building quantitative trading system</li>
                         </ul>
                     </div>
                     <div class="tab-content" id="experience">
@@ -69,6 +70,35 @@
                             <li><span>Sep 2013 - Jun 2017</span><br>Bachelor of Energy Engineering at Southeast University</li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ----------services-------------- -->
+    <div id="services">
+        <div class="container">
+            <h1 class="subtitle">Services</h1>
+            <div class="service-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor quam ut dolor consequat
+                        tincidunt. Fusce hendrerit fringilla est, nec sollicitudin libero vestibulum id.</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-gamepad"></i>
+                    <h2>Game Design</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor quam ut dolor consequat
+                        tincidunt. Fusce hendrerit fringilla est, nec sollicitudin libero vestibulum id.</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-arrow-trend-up"></i>
+                    <h2>Quantitative Finance</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor quam ut dolor consequat
+                        tincidunt. Fusce hendrerit fringilla est, nec sollicitudin libero vestibulum id.</p>
+                    <a href="#">Learn more</a>
                 </div>
             </div>
         </div>
