--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
         <div class="container">
             <nav>
                 <img src="images/logo.png" class="logo">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                <ul id="sidemenu">
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
+                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
                 <p>Fullstack Developer</p>
@@ -55,7 +57,8 @@
                         <ul>
                             <li><span>Web Development</span><br>Web app development</li>
                             <li><span>Game Design & Programming</span><br>SDL game development</li>
-                            <li><span>Quantitative Finance Development</span><br>Building quantitative trading system</li>
+                            <li><span>Quantitative Finance Development</span><br>Building quantitative trading system
+                            </li>
                         </ul>
                     </div>
                     <div class="tab-content" id="experience">
@@ -67,7 +70,8 @@
                     <div class="tab-content" id="education">
                         <ul>
                             <li><span>Sep 2023 - May 2025</span><br>Master of Information Technology at UNSW</li>
-                            <li><span>Sep 2013 - Jun 2017</span><br>Bachelor of Energy Engineering at Southeast University</li>
+                            <li><span>Sep 2013 - Jun 2017</span><br>Bachelor of Energy Engineering at Southeast
+                                University</li>
                         </ul>
                     </div>
                 </div>
@@ -112,7 +116,8 @@
                     <img src="images/work-1.png">
                     <div class="layer">
                         <h3>Social Media App</h3>
-                        <p>The app connects you to the talented people around the world. Download it from play store.</p>
+                        <p>The app connects you to the talented people around the world. Download it from play store.
+                        </p>
                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -120,7 +125,8 @@
                     <img src="images/work-2.png">
                     <div class="layer">
                         <h3>Music App</h3>
-                        <p>The app connects you to the talented people around the world. Download it from play store.</p>
+                        <p>The app connects you to the talented people around the world. Download it from play store.
+                        </p>
                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -128,7 +134,8 @@
                     <img src="images/work-3.png">
                     <div class="layer">
                         <h3>Online Shopping App</h3>
-                        <p>The app connects you to the talented people around the world. Download it from play store.</p>
+                        <p>The app connects you to the talented people around the world. Download it from play store.
+                        </p>
                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -141,23 +148,25 @@
         <div class="container">
             <div class="row">
                 <div class="contact-left">
-                    <h1 class=""subtitle>Contact Me</h1>
-                    <p><i class="fa-solid fa-paper-plane"></i> ymsongx@gmail.com</p>
+                    <h1 class="" subtitle>Contact Me</h1>
+                    <p><i class="fa-solid fa-paper-plane"></i> <a href="mailto:ymsongx@gmail.com">ymsongx@gmail.com</a></p>
                     <p><i class="fa-solid fa-square-phone"></i> +61 0416956617</p>
                     <div class="social-icons">
                         <a href="https://www.facebook.com/yamei.songx"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://www.instagram.com/yamei.song/"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/yamei-song-7ba102188/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/yamei-song-7ba102188/"><i
+                                class="fa-brands fa-linkedin"></i></a>
                     </div>
                     <a href="images/my-cv.pdf" class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
-                    <form>
-                        <input type="text" name="name" placeholder="Your Name" required>
-                        <input type="email" name="email" placeholder="Your Email" required>
+                    <form name="submit-to-google-sheet">
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="Email" placeholder="Your Email" required>
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn btn2">Submit</button>
                     </form>
+                    <span id="msg"></span>
                 </div>
             </div>
         </div>
@@ -179,6 +188,37 @@
         event.currentTarget.classList.add('active-link');
         document.getElementById(tabname).classList.add('active-content');
     }
+</script>
+
+<script>
+    var sidemenu = document.getElementById("sidemenu");
+
+    function openmenu() {
+        sidemenu.style.right = "0"; // make menu visiable
+    }
+
+    function closemenu() {
+        sidemenu.style.right = "-200px"; // hide menu
+    }
+</script>
+
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzx5GvdzZFEcbn83WKebfGGRURTAA-zVFwwZ4rkrjVetGz5utt3hVCedH2_WQZ60CrJdw/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg = document.getElementById("msg")
+
+    form.addEventListener('submit', e => {
+        e.preventDefault()
+        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+            .then(response => {
+                msg.innerHTML = "Message sent successfully"
+                setTimeout(function () {
+                    msg.innerHTML = ""
+                }, 5000)
+                form.reset()
+            })
+            .catch(error => console.error('Error!', error.message))
+    })
 </script>
 
 </html>
